# rust-bindgen

./: .travis.yml  Cargo.toml  index.html  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
bindgen/: enum.LinkType.html  index.html  sidebar-items.js  struct.Bindings.html  struct.Builder.html  trait.Logger.html
bindgen_plugin/: Cargo.toml
bindgen_plugin/src/: bgmacro.rs  lib.rs  parser.rs
bindgen_plugin/tests/: basic.rs
bindgen_plugin/tests/headers/: base.h
clang_sys/: constant.CXCodeComplete_IncludeBriefComments.html  constant.CXCodeComplete_IncludeCodePatterns.html  constant.CXCodeComplete_IncludeMacros.html  constant.CXCompletionContext_AnyType.html  constant.CXCompletionContext_AnyValue.html  constant.CXCompletionContext_ArrowMemberAccess.html  constant.CXCompletionContext_CXXClassTypeValue.html  constant.CXCompletionContext_ClassTag.html  constant.CXCompletionContext_DotMemberAccess.html  constant.CXCompletionContext_EnumTag.html  constant.CXCompletionContext_MacroName.html  constant.CXCompletionContext_Namespace.html  constant.CXCompletionContext_NaturalLanguage.html  constant.CXCompletionContext_NestedNameSpecifier.html  constant.CXCompletionContext_ObjCCategory.html  constant.CXCompletionContext_ObjCClassMessage.html  constant.CXCompletionContext_ObjCInstanceMessage.html  constant.CXCompletionContext_ObjCInterface.html  constant.CXCompletionContext_ObjCObjectValue.html  constant.CXCompletionContext_ObjCPropertyAccess.html  constant.CXGlobalOpt_None.html  (+407 more)
(+985 files in other folders)
